@@ -83,8 +83,8 @@ MainFrame manage toplevel to have:<BR>
 <UL>
 <LI>simple menu creation, with automatic accelerator bindings and
 <A HREF="DynamicHelp.html">DynamicHelp</A> association,
-<LI>one or more toolbar that user can hide,
-<LI>a status bar, displaying a user message or a menu description, and optionnaly a 
+<LI>one or more toolbars that user can hide,
+<LI>a status bar, displaying a user message or a menu description, and optionally a 
 <A HREF="ProgressBar.html">ProgressBar</A>.
 </UL>
 </P>
